Movie Area link

--- a/src/main/resources/templates/areas/area_list.html
+++ b/src/main/resources/templates/areas/area_list.html
@@ -11,7 +11,7 @@
 
 <h2 th:text="${movie}"></h2>
 
-<a class="btn btn-primary" th:text="지역추가" th:href="@{/{movie}/area/create (name=${movie})}"></a>
+<a class="btn btn-primary" th:text="지역추가" th:href="@{/{id}/area/create (id=${movie})}"></a>
 
 <div>
     <table class="table table-striped"> <thead>
