--- a/src/main/resources/templates/areas/area_list.html
+++ b/src/main/resources/templates/areas/area_list.html
@@ -9,9 +9,9 @@
 
 <h1>관리자 권한 : 지역 화면</h1>
 
-<h2 th:text="${movie}"></h2>
+<h2 th:text="${movie.name}"></h2>
 
-<a class="btn btn-primary" th:text="지역추가" th:href="@{/{id}/area/create (id=${movie})}"></a>
+<a class="btn btn-primary" th:text="지역추가" th:href="@{/{id}/area/create (id=${movie.id})}"></a>
 
 <div>
     <table class="table table-striped"> <thead>
