--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="Content-Type" content="text/html, charset=UTF-8" />
 </head>
 <body>
-<div class="container">
+<div>
     <h1>영화 목록</h1>
 
     <a class="btn btn-primary" href="/movie/create">영화 생성</a>
