--- a/src/main/resources/templates/areas/area_list.html
+++ b/src/main/resources/templates/areas/area_list.html
@@ -11,7 +11,8 @@
 
 <h2 th:text="${movie.name}"></h2>
 
-<a class="btn btn-primary" th:text="지역추가" th:href="@{/{id}/area/create (id=${movie.id})}"></a>
+<a class="btn btn-primary" th:text="지역추가" th:href="@{/{id}/area/create (id=${movie.id})}"
+    style="width:25%; background-color:orange"></a>
 
 <div>
     <table class="table table-striped"> <thead>
@@ -24,12 +25,16 @@
         <tr th:each="area : ${areas}">
             <td th:text="${area.id}"></td>
             <td th:text="${area.name}"></td>
+            <td>
+                <a th:text="지역" th:href="@{/{movie_id}/{area_id}/specificArea (movie_id=${movie.id}, area_id=${area.id})}"></a>
+            </td>
         </tr>
         </tbody>
     </table>
 </div>
 
-<a class="btn btn-primary" th:text="돌아가기" th:href="@{/}"></a>
+<a class="btn btn-primary" th:text="돌아가기" th:href="@{/}"
+    style="width:25%"></a>
 
 <th:block th:replace="fragments/footer :: footer"></th:block>
 </body>
