--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -23,7 +23,7 @@
                 <td th:text="${movie.id}"></td>
                 <td th:text="${movie.name}"></td>
                 <td>
-                    <a th:text="지역" th:href="@{/{id}/area (id=${movie.id})}"></a>
+                    <a class="btn btn-primary" th:text="지역" th:href="@{/{id}/area (id=${movie.id})}"></a>
                 </td>
             </tr>
             </tbody>
