--- a/src/main/resources/templates/specific_area/specific_area_list.html
+++ b/src/main/resources/templates/specific_area/specific_area_list.html
@@ -27,7 +27,7 @@
             <td th:text="${specificArea.id}"></td>
             <td th:text="${specificArea.name}"></td>
             <td>
-                <a th:text="날짜" th:href="@{/{movie_id}/{area_id}/{spec_id}/date_list
+                <a class="btn btn-primary" th:text="날짜" th:href="@{/{movie_id}/{area_id}/{spec_id}/date_list
                 (movie_id=${movie.id}, area_id=${area.id}, spec_id=${specificArea.id})}"></a>
             </td>
         </tr>
