--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,36 +1,27 @@
-<!DOCTYPE html>
+<!DOCTYPE HTML>
 <html xmlns:th="http://www.thymeleaf.org">
 <head th:replace="fragments/header :: header">
     <title>Hello</title>
-    <meta http-equiv="Content-Type" content="text/html, charset=UTF-8" />
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 </head>
 <body>
-<div>
-    <h1>영화 목록</h1>
+<div class="container">
 
-    <a class="btn btn-primary" href="/movie/create">영화 생성</a>
+    <div th:replace="fragments/bodyHeader :: bodyHeader"/>
 
-    <div>
-        <table class="table table-striped">
-            <thead>
-            <tr>
-                <th>#</th>
-                <th>Title</th>
-            </tr>
-            </thead>
-            <tbody>
-            <tr th:each="movie : ${movies}">
-                <td th:text="${movie.id}"></td>
-                <td th:text="${movie.name}"></td>
-                <td>
-                    <a class="btn btn-primary" th:text="지역" th:href="@{/{id}/area (id=${movie.id})}"></a>
-                </td>
-            </tr>
-            </tbody>
-        </table>
+    <div class="jumbotron"> <h1>은아와 찬의의 찌부찌부 영화관 :)</h1>
+        <p class="lead">회원 기능</p> <p>
+            <a class="btn btn-lg btn-secondary" href="/members/create">회원 가입</a>
+            <a class="btn btn-lg btn-secondary" href="/members">회원 목록</a> </p>
+        <p class="lead">관리자 기능</p> <p>
+            <a class="btn btn-lg btn-dark" href="/movie/create">영화 생성</a>
+            <a class="btn btn-lg btn-dark" href="/movie/list">영화 목록</a> </p>
+        <p class="lead">예약 기능</p> <p>
+            <a class="btn btn-lg btn-info" href="/reservation/create">영화 예약</a>
+            <a class="btn btn-lg btn-info" href="/reservations">예약 내역</a> </p>
     </div>
-</div>
+    <div th:replace="fragments/footer :: footer" />
+</div> <!-- /container -->
 
-<th:block th:replace="fragments/footer :: footer"></th:block>
 </body>
 </html>
