--- a/src/main/resources/templates/reservation/reservation_list.html
+++ b/src/main/resources/templates/reservation/reservation_list.html
@@ -6,12 +6,12 @@
             <div>
                 <form th:object="${reservationSearch}" class="form-inline">
                     <div class="form-group mb-2">
-                    <input type="text" th:field="*{memberName}" class="form- control" placeholder="회원명"/>
-                    <input type="text" th:field="*{movieName}" class="form- control" placeholder="영화명"/>
+                    <input type="text" th:field="*{memberName}" class="form-control" placeholder="회원명"/>
+                    <input type="text" th:field="*{movieName}" class="form-control" placeholder="영화명"/>
                     </div>
                         <div class="form-group mx-sm-1 mb-2">
-                            <select th:field="*{orderStatus}" class="form-control"> <option value="">주문상태</option>
-                                <option th:each="status : ${T(ChanuE.MovieTheater.domain.ReservationStatus.values()}"
+                            <select th:field="*{reservationStatus}" class="form-control"> <option value="">예약상태</option>
+                                <option th:each="status : ${T(ChanuE.MovieTheater.domain.ReservationStatus).values()}"
                                         th:value="${status}"
                                         th:text="${status}">option
                                 </option>
@@ -23,18 +23,20 @@
             <table class="table table-striped"> <thead>
                 <tr>
                     <th>#</th>
-                    <th>회원명</th> <th>예약자 성함</th>
-                    <th>영화 이름</th> <th>예약 상태</th>
+                    <th>회원명</th>
+                    <th>예약자 성함</th>
+                    <th>영화 이름</th>
+                    <th>예약 상태</th>
                 </tr>
                 </thead>
                     <tbody>
-                    <td th:each="reservation : ${reservations}">
-                        <td th:text="${reservation.id}"></td>
-                        <td th:text="${reservation.member.memberName}"></td>
-                        <td th:text="${reservation.movie.movieName}"></td>
-                        <td th:text="${reservation.status}"></td>
+                    <tr th:each="booking : ${reservations}">
+                        <td th:text="${booking.id}"></td>
+                        <td th:text="${booking.member.memberName}"></td>
+                        <td th:text="${booking.movie.movieName}"></td>
+                        <td th:text="${booking.status}"></td>
                         <td>
-                            <a th:if="${reservation.status.name() == 'RESERVED'}" href="#" th:href="'javascript:cancel('+${reservation.id}+')'"
+                            <a th:if="${booking.status.name() == 'RESERVED'}" href="#" th:href="'javascript:cancel('+${booking.id}+')'"
                                class="btn btn-danger">CANCEL</a> </td>
                     </tr>
                     </tbody>
