Reservation search condition -ing..

--- a/src/main/resources/templates/fragments/bodyHeader.html
+++ b/src/main/resources/templates/fragments/bodyHeader.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org"> <div class="header" th:fragment="bodyHeader">
-    <ul class="nav nav-pills pull-right"> <li><a href="/">Home</a></li>
+    <ul class="nav nav-pills pull-right"> <li><a href="/">메인 화면으로...</a></li>
     </ul>
     <a href="/"><h3 class="text-muted">은아와 찬의의 찌부찌부 영화관 :)</h3></a> </div>
