--- a/src/main/resources/templates/areas/area_list.html
+++ b/src/main/resources/templates/areas/area_list.html
@@ -9,7 +9,7 @@
 
 <h1>관리자 권한 : 지역 화면</h1>
 
-<h2 th:text="${movie.name}"></h2>
+<h2 th:text="${movie.movieName}"></h2>
 
 <a class="btn btn-primary" th:text="지역추가" th:href="@{/{id}/area/create (id=${movie.id})}"
     style="width:25%; background-color:orange"></a>
