--- a/src/main/resources/templates/reservation/reservation_form.html
+++ b/src/main/resources/templates/reservation/reservation_form.html
@@ -23,5 +23,6 @@
     </form>
     <br/>
     <div th:replace="fragments/footer :: footer" />
-</div> <!-- /container --> </body>
+</div> <!-- /container -->
+</body>
 </html>
