--- a/src/main/resources/templates/specific_area/specific_area_list.html
+++ b/src/main/resources/templates/specific_area/specific_area_list.html
@@ -9,7 +9,7 @@
 
 <h1>관리자 권한 : 구체적 지역 화면</h1>
 
-<h2 th:text="${movie.name}"></h2>
+<h2 th:text="${movie.movieName}"></h2>
 <h2 th:text="${area.name}"></h2>
 
 <a class="btn btn-primary" th:text="세부지역추가" th:href="@{/{movie_id}/{area_id}/specificArea/create
