--- a/src/main/resources/templates/time_tables/time_table_list.html
+++ b/src/main/resources/templates/time_tables/time_table_list.html
@@ -9,7 +9,7 @@
 
 <h1>관리자 권한 : 시간 리스트!</h1>
 
-<h2 th:text="${movie.name}"></h2>
+<h2 th:text="${movie.movieName}"></h2>
 <h2 th:text="${area.name}"></h2>
 <h2 th:text="${specificArea.name}"></h2>
 <h2 th:text="${date.localDate}"></h2>
