--- a/src/main/resources/templates/time_tables/time_table_create.html
+++ b/src/main/resources/templates/time_tables/time_table_create.html
@@ -9,7 +9,7 @@
 
 <div>
     <div>
-        <p th:value="${movie.name}"></p><br/>
+        <p th:value="${movie.movieName}"></p><br/>
         <p th:value="${area.name}"></p><br/>
         <p th:value="${specificArea.name}"></p><br/>
         <p th:value="${date.localDate}"></p><br/>
