--- a/src/main/resources/templates/areas/area_create.html
+++ b/src/main/resources/templates/areas/area_create.html
@@ -9,7 +9,7 @@
 
 <div>
     <div>
-        <p th:value="${movie.name}"></p><br/>
+        <p th:value="${movie.movieName}"></p><br/>
         <form role="form" th:action="@{/{id}/area/create (id=${movie.id})}" th:object="${area}" method="post">
             <div>
                 <label th:for="name">Name : </label>
