--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -16,6 +16,7 @@
         <p class="lead">관리자 기능</p> <p>
             <a class="btn btn-lg btn-dark" href="/movie/create">영화 생성</a>
             <a class="btn btn-lg btn-dark" href="/movies">영화 목록</a> </p>
+            <a class="btn btn-lg btn-dark" href="/api/movie/create">API 영화 생성</a>
         <p class="lead">예약 기능</p> <p>
             <a class="btn btn-lg btn-info" href="/reservation/create">영화 예약</a>
             <a class="btn btn-lg btn-info" href="/reservations">예약 내역</a> </p>
