--- a/src/main/resources/templates/reservation/reservation_form_v2.html
+++ b/src/main/resources/templates/reservation/reservation_form_v2.html
@@ -60,5 +60,7 @@
     </form>
     <br/>
     <div th:replace="fragments/footer :: footer" />
-</div> <!-- /container --> </body>
+</div> <!-- /container -->
+</div>
+</body>
 </html>
