--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,13 +1,10 @@
 <!DOCTYPE HTML>
 <html xmlns:th="http://www.thymeleaf.org">
-<head th:replace="fragments/header :: header">
-    <title>Hello</title>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-</head>
-<body>
-<div class="container">
 
-    <div th:replace="fragments/bodyHeader :: bodyHeader"/>
+<th:block th:replace="~{/layout/basic :: setContent(~{this :: content})}">
+    <th:block th:fragment="content">
+
+<div class="container">
 
     <div class="jumbotron"> <h1>은아와 찬의의 찌부찌부 영화관 :)</h1>
         <p class="lead">회원 기능</p> <p>
@@ -15,14 +12,13 @@
             <a class="btn btn-lg btn-secondary" href="/members">회원 목록</a> </p>
         <p class="lead">관리자 기능</p> <p>
             <a class="btn btn-lg btn-dark" href="/movie/create">영화 생성</a>
-            <a class="btn btn-lg btn-dark" href="/movies">영화 목록</a> </p>
-            <a class="btn btn-lg btn-dark" href="/api/movie/create">API 영화 생성</a>
+            <a class="btn btn-lg btn-dark" href="/movie/list">영화 목록</a> </p>
         <p class="lead">예약 기능</p> <p>
             <a class="btn btn-lg btn-info" href="/reservation/create">영화 예약</a>
             <a class="btn btn-lg btn-info" href="/reservations">예약 내역</a> </p>
     </div>
-    <div th:replace="fragments/footer :: footer" />
-</div> <!-- /container -->
 
-</body>
+</div> <!-- /container -->
+    </th:block>
+</th:block>
 </html>
