--- a/src/main/resources/templates/time_tables/time_table_list.html
+++ b/src/main/resources/templates/time_tables/time_table_list.html
@@ -1,11 +1,8 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-<head th:replace="fragments/header :: header">
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-    <meta charset="UTF-8">
-    <title>시간 추가!</title>
-</head>
-<body>
+<th:block th:replace="~{/layout/content :: setContent(~{this :: content})}">
+
+    <th:block th:fragment="content">
 
 <h1>관리자 권한 : 시간 리스트!</h1>
 
@@ -18,7 +15,7 @@
 (movie_id=${movie.id}, area_id=${area.id}, specific_id=${specificArea.id}, date_id=${date.id})}"></a>
 
 <div>
-    <table class="table table-striped"> <thead>
+    <table class="table table-striped"><thead>
     <tr>
         <th>#</th>
         <th>이름</th>
@@ -36,6 +33,6 @@
 <a class="btn btn-primary" th:text="돌아가기" th:href="@{/{movie_id}/{area_id}/{specific_id}/date_list
 (movie_id=${movie.id}, area_id=${area.id}, specific_id=${specificArea.id})}"></a>
 
-<th:block th:replace="fragments/footer :: footer"></th:block>
-</body>
+    </th:block>
+</th:block>
 </html>
