--- a/src/main/resources/templates/areas/area_list.html
+++ b/src/main/resources/templates/areas/area_list.html
@@ -1,11 +1,9 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-<head th:replace="fragments/header :: header">
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-    <meta charset="UTF-8">
-    <title>영화 별 지역 화면</title>
-</head>
-<body>
+
+<th:block th:replace="~{/layout/content :: setContent(~{this :: content})}">
+
+    <th:block th:fragment="content">
 
 <h1>관리자 권한 : 지역 화면</h1>
 
@@ -36,6 +34,7 @@
 <a class="btn btn-primary" th:text="돌아가기" th:href="@{/}"
     style="width:25%"></a>
 
-<th:block th:replace="fragments/footer :: footer"></th:block>
-</body>
+    </th:block>
+</th:block>
+
 </html>
