--- a/src/main/resources/templates/layout/basic.html
+++ b/src/main/resources/templates/layout/basic.html
@@ -12,14 +12,14 @@
   <title>HCY Movie Theater</title>
 
   <!-- Bootstrap core CSS -->
-  <link th:href=@{vendor/bootstrap/css/bootstrap.min.css} rel="stylesheet">
+  <link href=/vendor/bootstrap/css/bootstrap.min.css rel="stylesheet">
 
   <!-- Custom styles for this template -->
-  <link th:href=@{css/shop-homepage.css} rel="stylesheet">
+  <link href=/css/shop-homepage.css rel="stylesheet">
 
   <!-- Bootstrap core JavaScript -->
-  <script th:src=@{vendor/jquery/jquery.min.js}></script>
-  <script th:src=@{vendor/bootstrap/js/bootstrap.bundle.min.js}></script>
+  <script src=/vendor/jquery/jquery.min.js></script>
+  <script src=/vendor/bootstrap/js/bootstrap.bundle.min.js></script>
 
 
 </head>
@@ -29,7 +29,7 @@
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
     <div class="container">
-      <a class="navbar-brand" href="#">Start Bootstrap</a>
+      <a class="navbar-brand" href="/">HCY Movie Theater</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
