--- a/src/main/resources/templates/specific_area/specific_area_create.html
+++ b/src/main/resources/templates/specific_area/specific_area_create.html
@@ -1,9 +1,8 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-<head th:replace="fragments/header :: header">
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-</head>
-<body>
+<th:block th:replace="~{/layout/content :: setContent(~{this :: content})}">
+
+    <th:block th:fragment="content">
 
 <h1>관리자 권한 : 세부 지역 추가 지역 추가 화면</h1>
 
@@ -22,6 +21,6 @@
     </div>
 </div>
 
-<th:block th:replace="fragments/footer :: footer"></th:block>
-</body>
+    </th:block>
+</th:block>
 </html>
